# Repo-Context-Packager

./: .pack-repo.template.toml  LICENSE  README.md  pack-repo.py  pyproject.toml  repo-context.txt  requirement.txt  requirements.txt
.github/workflows/: python-app.yml
src/: arg_parser.py  content_writer.py  pack-repo.py  repo-context.txt  test.py  test_content_writer.py  test_util.py  util.py
src/repo_context_packager/: arg_parser.py  pack-repo.py
tests/: test_arg_parser.py  test_content_writer.py  test_pack_repo.py  test_util.py
