[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "repo_context_packager_denisc96"
version = "1.0.0"
authors = [
  { name="Denis Cheung", email="hokkan@connect.hku.hk" },
]
description = "Pack Git Repository into a text file for use in LLM"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-2-Clause"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/DenisC96/Repo-Context-Packager"
Issues = "https://github.com/DenisC96/Repo-Context-Packager/issues"